--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.0.0",
     "consolidate": "^0.10.0",
+    "cookie-parser": "^1.3.3",
     "debug": "~0.7.4",
     "errorhandler": "^1.2.0",
     "express": "~4.2.0",
