switch to cn-sandbox

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -1,7 +1,7 @@
 {
    "manifest_version" : "3.0",
    "tradeshift_version" : "5.0",
-   "vendor_id":"LJ_3rd_party",
+   "vendor_id":"a3rdparty",
    "version":"0.0.1", 
    "app_id":"demoheroku",
    "default_locale" : "en-GB",
