--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -3,12 +3,12 @@
    "tradeshift_version" : "5.0",
    "vendor_id":"a3rdparty",
    "version":"0.0.1", 
-   "app_id":"demoheroku2",
+   "app_id":"demoheroku3",
    "default_locale" : "en-GB",
    "locales" : {
        "en-GB" : {
-           "app_name" : "Third-party app demo on Herok 2",
-           "app_desc" : "Third party app demo (OAuth2):) 2"
+           "app_name" : "Third-party app demo on Herok 3",
+           "app_desc" : "Third party app demo (OAuth2):)"
        }
    },
    "config" : {
