--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -1,9 +1,9 @@
 {
    "manifest_version" : "3.0",
    "tradeshift_version" : "5.0",
-   "vendor_id":"a3rdparty",
+   "vendor_id":"LJ_3rd_party",
    "version":"0.0.1", 
-   "app_id":"demoheroku3",
+   "app_id":"demoheroku",
    "default_locale" : "en-GB",
    "locales" : {
        "en-GB" : {
