--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.8.2",
     "handlebars": "^2.0.0",
     "jade": "~1.3.0",
+    "markdown": "^0.5.0",
     "morgan": "~1.0.0",
     "static-favicon": "~1.0.0"
   }
