--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tradeshift-Third-party-App-demo",
+  "name": "TS3rdPartyAppDemo",
   "version": "0.0.1",
   "private": true,
   "scripts": {
